<?xml version="1.0"?>
<package> 
  <name>visual_servo</name>
  <version>0.1.0</version>
  <description>The visual_servo package</description>

  <maintainer email="antoine@todo.todo">antoine</maintainer>


 <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>high_level_planner</build_depend>
  <build_depend>aruco_ros</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>aruco_ros</run_depend>
  <run_depend>high_level_planner</run_depend>
  <run_depend>std_srvs</run_depend>


</package>
